--- a/config/kitty/kanagawa.conf
+++ b/config/kitty/kanagawa.conf
@@ -14,11 +14,10 @@ url_color #72A7BC
 cursor #C8C093
 
 # Tabs
-active_tab_background #1F1F28
+active_tab_background #2D4F67
 active_tab_foreground #C8C093
-inactive_tab_background  #1F1F28
-inactive_tab_foreground #727169
-#tab_bar_background #15161E
+inactive_tab_background  #2A2A37
+inactive_tab_foreground #C8C093
 
 # normal
 color0 #16161D
@@ -44,4 +43,3 @@ color15 #DCD7BA
 # extended colors
 color16 #FFA066
 color17 #FF5D62
-  
