--- a/config/starship.toml
+++ b/config/starship.toml
@@ -17,6 +17,7 @@ $status\
 $character"""
 
 [directory]
+format = "[ $path]($style)[$read_only]($read_only_style) "
 read_only = ' 󰌾'
 truncation_length = 0
 
@@ -30,7 +31,7 @@ format = '[$status]($style) '
 style = 'bold bright-red'
 
 [character]
-#success_symbol = '❱'
-#error_symbol = '[❱](bright-red)'
-success_symbol = '[>](bold)'
-error_symbol = '[>](bright-red bold)'
+success_symbol = '❱'
+error_symbol = '[❱](bright-red)'
+# success_symbol = '[>](bold)'
+# error_symbol = '[>](bright-red bold)'
