--- a/config/kitty/Tokyo Night.conf
+++ b/config/kitty/Tokyo Night.conf
@@ -15,8 +15,8 @@ cursor #c0caf5
 cursor_text_color #1a1b26
 
 # Tabs
-active_tab_background #283457
-active_tab_foreground #c0caf5
+active_tab_background #449dab
+active_tab_foreground #1a1b26
 inactive_tab_background #292e42
 inactive_tab_foreground #545c7e
 #tab_bar_background #15161e
