--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -49,4 +49,4 @@ map alt+0 goto_tab 10
 mouse_map alt+left press ungrabbed mouse_selection rectangle
 
 # Theme
-include ./tokyonight_night.conf
+include ./Tokyo Night.conf
