--- a/config/starship.toml
+++ b/config/starship.toml
@@ -33,6 +33,7 @@ nu_indicator = '󰞷 nu'
 format = '[ $path]($style)[$read_only]($read_only_style) '
 read_only = ' 󰌾'
 truncation_length = 0
+style = 'bold blue'
 
 [git_commit]
 tag_disabled = false
